# pydropcountr

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cli.py  pydropcountr.py  pyproject.toml  test_login.py
.github/workflows/: ci.yml
pydropcountr/: __init__.py  cli.py  pydropcountr.py
